Implemented first 24 test scenarios 1024/1037